# ParkSpot_Monitor

./: .gitignore  Dockerfile  README.eng.md  README.md  docker-compose.yml  pyproject.toml
park_spot_monitor/: .dockerignore  .env.example  .env_docker  .gitignore  LICENSE  docker-compose.dev.yml  docker-compose.yml  manage.py  pyproject.toml  requirements.txt
park_spot_monitor/admin_app/: admin.py  forms.py  models.py  urls.py  views.py
park_spot_monitor/admin_app/migrations/: 0001_initial.py  0002_delete_parkingrate_delete_registerednumberplate.py  0003_delete_blacklistedvehicle.py
park_spot_monitor/docker/: Dockerfile  Dockerfile.old
park_spot_monitor/docker/dev/: Dockerfile  entrypoint.sh
park_spot_monitor/docs/: admin_app.migrations.rst  admin_app.rst  conf.py  index.rst  main_app.migrations.rst  main_app.rst  modules.rst  number_recognition.migrations.rst  number_recognition.rst  park_spot_monitor.rst  users.migrations.rst  users.rst
park_spot_monitor/main_app/: middleware.py  models.py  urls.py  views.py
park_spot_monitor/main_app/migrations/: 0001_initial.py  0002_remove_sessions_plate_delete_plates_delete_sessions.py  0003_initial.py  0004_remove_sessions_plate_delete_plates_delete_sessions.py
park_spot_monitor/number_recognition/: apps.py  number_recognition.py  urls.py  views.py
park_spot_monitor/park_spot_monitor/: asgi.py  forms.py  settings.py  urls.py  views.py  wsgi.py
park_spot_monitor/plate_recognition/: data.yaml
park_spot_monitor/tests/: pytest.ini  test_views.py
park_spot_monitor/users/: forms.py  middleware.py  models.py  urls.py  views.py
park_spot_monitor/users/migrations/: 0001_initial.py  0002_alter_plates_plate.py  0002_profile.py  0003_alter_plates_plate.py  0003_alter_plates_plate_alter_plates_user_delete_profile.py  0003_entry_balance.py  0004_alter_balance_amount.py  0004_blacklistedvehicle.py  0004_delete_parkingrate_rename_amount_balance_balance.py  0005_alter_balance_balance.py  (+7 more)
(+43 files in other folders)
